--- a/source-css/bonquisition.css
+++ b/source-css/bonquisition.css
@@ -27,6 +27,16 @@ a[href|="/taviboncritique"]{display:block;clear:none;float:left;width:200px;heig
 a[href|="/fluffysit"]{display:block;clear:none;float:left;width:180px;height:194px;background-image:url(%%fluffysit%%)}
 a[href|="/lbsnuggle"]{display:block;clear:none;float:left;width:150px;height:131px;background-image:url(%%lbsnuggle%%)}
 a[href|="/lbadventures"]{display:block;clear:none;float:left;width:138px;height:180px;background-image:url(%%lbadventures%%)}
+a[href|="/sbscrunchie"]{display:block;clear:none;float:left;width:130px;height:150px;background-image:url(%%sbscrunchie%%)}
+a[href|="/bondrunk"]{display:block;clear:none;float:left;width:147px;height:150px;background-image:url(%%bondrunk%%)}
+a[href|="/bongrass"]{display:block;clear:none;float:left;width:150px;height:131px;background-image:url(%%bongrass%%)}
+a[href|="/bonterest"]{display:block;clear:none;float:left;width:109px;height:150px;background-image:url(%%bonterest%%)}
+a[href|="/bonwhy"]{display:block;clear:none;float:left;width:139px;height:150px;background-image:url(%%bonwhy%%)}
+a[href|="/nightmarebon"]{display:block;clear:none;float:left;width:200px;height:128px;background-image:url(%%nightmarebon%%)}
+a[href|="/paperbon"]{display:block;clear:none;float:left;width:145px;height:150px;background-image:url(%%paperbon%%)}
+a[href|="/rastabon"]{display:block;clear:none;float:left;width:102px;height:150px;background-image:url(%%rastabon%%)}
+a[href|="/xmasbon"]{display:block;clear:none;float:left;width:120px;height:120px;background-image:url(%%xmasbon%%)}
+a[href|="/sweetiehugs"]{display:block;clear:none;float:left;width:171px;height:200px;background-image:url(%%sweetiehugs%%)}
 div.titlebox span.word{display:none}div.titlebox span.number:after{content:" sweets eaters"}
 .sidecontentbox .helplink+.title h1{font-size:0!important}.sidecontentbox .helplink+.title h1:before{font-size:10pt!important;content:"BONALCOHOLICS"}
 body{background: url(%%background%%) no-repeat fixed center center }
