--- a/source-css/braeburnquisition.css
+++ b/source-css/braeburnquisition.css
@@ -12,7 +12,8 @@ a[href|="/braesoarnuzzle"] {
     float: left;
     width: 150px;
     height: 122px;
-    background-image:url(%%braesoarnuzzle%%)
+    background-position: -0px -1168px; 
+    background-image:url(%%Braestylesheet%%)
 }
 a[href|="/sexyburn"] {
     display: block;
@@ -55,7 +56,8 @@ a[href|="/rifleburn"] {
     float: left;
     width: 190px;
     height: 150px;
-    background-image:url(%%rifleburn%%)
+    background-position: -0px -698px; 
+    background-image:url(%%Braestylesheet%%)
 }
 
 a[href|="/scootaburn"] {
@@ -138,7 +140,7 @@ a[href|="/braesoarhug"] {
     float: left;
     width: 180px;
     height: 159px;
-    background-image:url(%%braesoarhug%%)
+    background-image:url(%%Braestylesheet%%)
 }
 
 a[href|="/gayburn"] {
@@ -147,7 +149,8 @@ a[href|="/gayburn"] {
     float: left;
     width: 177px;
     height: 170px;
-    background-image:url(%%gayburn%%)
+    background-position: -0px -529px; 
+    background-image:url(%%Braestylesheet%%)
 }
 
 a[href|="/snailburn"] {
@@ -209,7 +212,8 @@ a[href|="/banexie"] {
     float: left;
     width: 200px;
     height: 145px;
-    background-image:url(%%banexie%%)
+    background-position: -0px -842px; 
+    background-image:url(%%Braestylesheet%%)
 }
 
 a[href|="/drinkxie"] {
@@ -227,7 +231,8 @@ a[href|="/fetaltrixie"] {
     float: left;
     width: 205px;
     height: 146px;
-    background-image:url(%%fetaltrixie%%)
+    background-position: -1px -159px; 
+    background-image:url(%%Braestylesheet%%)
 }
 
 a[href|="/sittrixie"] {
@@ -299,12 +304,128 @@ a[href|="/colgateworry"] {
     display: block;
     clear: none;
     float: left;
-    width: 178px;
-    height: 237px;
-    background-image:url(%%colgateworry%%)
+    width: 130px;
+    height: 173px;
+    background-position: -0px -986px; 
+    background-image:url(%%Braestylesheet%%)
 }
 
+a[href|="/bpandchug"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 179px;
+    height: 181px;
+    background-image:url(%%bpandchug%%)
+}
 
+a[href|="/pearlywhites"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 189px;
+    height: 171px;
+    background-image:url(%%pearlywhites%%)
+}
+
+a[href|="/righthere"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 171px;
+    background-image:url(%%righthere%%)
+}
+
+a[href|="/scrunchycolgate"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 180px;
+    height: 153px;
+    background-image:url(%%scrunchycolgate%%)
+}
+
+a[href|="/sockybrushie"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 175px;
+    height: 159px;
+    background-image:url(%%sockybrushie%%)
+}
+
+a[href|="/whynotcolgate"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 190px;
+    height: 195px;
+    background-image:url(%%whynotcolgate%%)
+}
+
+a[href|="/colgatederp"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 200px;
+    background-image:url(%%colgatederp%%)
+}
+
+a[href|="/colgatechristmas"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 179px;
+    height: 203px;
+    background-image:url(%%colgatechristmas%%)
+}
+
+a[href|="/yallbrushing"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 200px;
+    height: 200px;
+    background-image:url(%%yallbrushing%%)
+}
+
+a[href|="/brushingtime"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 180px;
+    height: 184px;
+    background-image:url(%%brushingtime%%)
+}
+
+a[href|="/berrypunchcolgatenuzzle"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 189px;
+    height: 120px;
+    background-image:url(%%berrypunchcolgatenuzzle%%)
+}
+
+a[href|="/colgatepunchsnuggle"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 190px;
+    height: 185px;
+    background-image:url(%%colgatepunchsnuggle%%)
+}
+
+a[href|="/yummybrush"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 180px;
+    height: 218px;
+    background-image:url(%%yummybrush%%)
+}
 
 div.titlebox span.word {display:none; }
 div.titlebox span.number:after {content:" Sexy Beasts";}
