--- a/source-css/mlpdrawingschool.css
+++ b/source-css/mlpdrawingschool.css
@@ -109,7 +109,7 @@ margin-right:0px;
     border-bottom:2px solid #0088CC;  
     height:11px;  
     line-height:10px;  
-    padding-top: 3px;
+    margin-top: -2px;
 }  
 .res-nightmode #sr-header-area{  
     background: #F6F9FC !important;  
@@ -178,7 +178,7 @@ margin-right:0px;
 .tabmenu {   
     padding:0 0 0 0;  
     position:absolute;
-    top:94px; 
+    top:91px; 
     left: -15px;
  
 }  
