--- a/source-css/mylittlechaos.css
+++ b/source-css/mylittlechaos.css
@@ -113,6 +113,14 @@ a[href|="/somuchporn"] {
     width: 300px;
     height: 395px;
     }
+a[href|="/dyegoogle"] {
+    clear: none;
+    display: block;
+    float: left;
+    background-image: url(%%dyegoogle%%);
+    width: 256px;
+    height: 300px;
+    }
 
 /*Animotes*/
 a[href|="/twiday"] {
