--- a/source-css/mylittledurian.css
+++ b/source-css/mylittledurian.css
@@ -4,6 +4,13 @@ div.titlebox span.word {display:none}
 div.titlebox .subscribers span.number:after {content:" Spikes"}
 div.titlebox .users-online span.number:after {content:" Spiking"}
 
+
+#header-img
+{
+ margin:5px 3px -3px 0px;
+ padding:0px 5px
+}
+
 /*Name replace*/
 
 a.author.id-t2_8gh9f{content:"";font-size:0px!important;display:inline-block;vertical-align:bottom;overflow:hidden;letter-spacing:-20px}
