--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -1,395 +1,448 @@
-a[href|="/rocktavia"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 151px;
-    height: 150px;
-    background-image:url(%%Rocktavia%%)
-}
+/* New fancy css with spritesheets! */  
 
-a[href|="/awkwardtavi"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 107px;
-    height: 150px;
-    background-image:url(%%Awkwardtavi%%)
-}
+/*stylesheet1*/
 
-a[href|="/catavia"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 149px;
-    height: 150px;
-    background-image:url(%%Catavia%%)
-}
+a[href|="/windytavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 166px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -0px -0px;  
+} 
 
-a[href|="/cuteoctascratch"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 164px;
-    height: 150px;
-    background-image:url(%%Cuteoctycsratch%%)
-}
+a[href|="/derpycello"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 105px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -337px -0px;  
+} 
+  
+a[href|="/othercreepaloo"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 122px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -0px -150px;  
+}     
+  
+a[href|="/vinylcello"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 138px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -304px -150px;  
+} 
 
-a[href|="/dj0ctav3"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 137px;
-    height: 150px;
-    background-image:url(%%Dj0cta3%%)
-}
+a[href|="/messytavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 176px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -0px -300px;  
+} 
 
-a[href|="/galatavi"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 233px;
-    height: 150px;
-    background-image:url(%%Galatavi%%)
-}
+a[href|="/fillytavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 106px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -336px -300px;  
+} 
 
-a[href|="/messytavi"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 176px;
-    height: 150px;
-    background-image:url(%%Messytavi%%)
-}
+a[href|="/awkwardtavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 107px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -0px -450px;  
+} 
 
-a[href|="/royaltavi"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 147px;
-    height: 150px;
-    background-image:url(%%Royaltavi%%)
-}
+a[href|="/frenchynoel"], a[href|="/frenchienoel"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 121px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -321px -450px;  
+} 
 
-a[href|="/vinylcello"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 138px;
-    height: 150px;
-    background-image:url(%%Vinylcello%%)
-}
+a[href|="/ponytailtavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 142px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -0px -600px;  
+} 
 
-a[href|="/scootavia"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 144px;
-    height: 150px;
-    background-image:url(%%scootavia%%)
-}
+a[href|="/greatandpowerfultavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 206px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -236px -600px;  
+} 
 
-a[href|="/derpycello"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 105px;
-    height: 150px;
-    background-image:url(%%Derpycello%%)
-}
+a[href|="/fluttertavisleep"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 210px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -0px -750px;  
+} 
 
-a[href|="/octybelle"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 102px;
-    height: 150px;
-    background-image:url(%%Octybelle%%)
-}
+a[href|="/dj0ctav3"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 137px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -305px -750px;  
+} 
 
-a[href|="/ponytailtavi"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 142px;
-    height: 150px;
-    background-image:url(%%Ponytailtavi%%)
-}
+a[href|="/rocktavia"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 151px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -0px -900px;  
+} 
 
-a[href|="/angryal"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 127px;
-    height: 150px;
-    background-image:url(%%angryal%%)
-}
+a[href|="/cuteoctyscratch"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 164px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -278px -900px;  
+} 
 
-a[href|="/fillytavi"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 106px;
-    height: 150px;
-    background-image:url(%%fillytavi%%)
-}
+a[href|="/pokertavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 143px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -0px -1050px;  
+} 
 
-a[href|="/twobestfriends"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 273px;
-    height: 150px;
-    background-image:url(%%twobestfriends%%)
-}
+a[href|="/huggingtavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 258px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -184px -1050px;  
+} 
 
-a[href|="/frenchynoel"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 121px;
-    height: 150px;
-    background-image:url(%%frenchynoel%%)
-}
+a[href|="/allove"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 138px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -0px -1200px;  
+} 
 
-a[href|="/awesomeband"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 267px;
-    height: 150px;
-    background-image:url(%%awesomeband%%)
-}
+a[href|="/royaltavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 147px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -295px -1200px;  
+} 
 
-a[href|="/basscannon"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 289px;
-    height: 150px;
-    background-image:url(%%basscannon%%)
-}
+a[href|="/galatavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 233px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -0px -1350px;  
+} 
 
-a[href|="/chatavia"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 133px;
-    height: 150px;
-    background-image:url(%%chatavia%%)
-}
+a[href|="/scootavia"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 144px;
+ height: 150px;
+ background-image: url(%%spritesheet1%%);
+ background-position: -298px -1350px;  
+} 
 
-a[href|="/elementofclass"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 174px;
-    height: 150px;
-    background-image:url(%%elementofclass%%)
-}
 
-a[href|="/huggingtavi"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 258px;
-    height: 150px;
-    background-image:url(%%huggingtavi%%)
-}
+/*stylesheet 2*/  
+  
+a[href|="/chibimafiatavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 149px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -0px -0px;  
+} 
 
-a[href|="/pokertavi"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 143px;
-    height: 150px;
-    background-image:url(%%pokertavi%%)
-}
+a[href|="/tavieww"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 214px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -228px -0px;  
+} 
 
-a[href|="/sittingtavi"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 77px;
-    height: 150px;
-    background-image:url(%%sittingtavi%%)
-}
+a[href|="/awesomeband"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 267px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -0px -150px;  
+} 
 
-a[href|="/tavicheering"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 170px;
-    height: 150px;
-    background-image:url(%%tavicheering%%)
-}
+a[href|="/octyseal"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 102px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -340px -150px;  
+} 
 
-a[href|="/alsemote"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 131px;
-    height: 150px;
-    background-image:url(%%alsemote%%)
-}
+a[href|="/armedtavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 101px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -0px -300px;  
+} 
 
-a[href|="/greatandpowerfultavi"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 206px;
-    height: 150px;
-    background-image:url(%%greatandpowerfultavi%%)
-}
+a[href|="/octybelle"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 102px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -340px -300px;  
+} 
 
-a[href|="/octascratchsocks"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 392px;
-    height: 150px;
-    background-image:url(%%octascratchsocks%%)
-}
+a[href|="/tavicolgatenuzzle"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 237px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -0px -450px;  
+} 
 
-a[href|="/tavilyranuzzle"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 237px;
-    height: 150px;
-    background-image:url(%%Tavilyranuzzle%%)
-}
+a[href|="/tavicheering"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 170px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -272px -450px;  
+} 
 
-a[href|="/tavireally"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 156px;
-    height: 150px;
-    background-image:url(%%tavireally%%)
-}
+a[href|="/octascratchrelax"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 206px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -0px -598px;  
+} 
 
-a[href|="/alpals"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 156px;
-    height: 150px;
-    background-image:url(%%alpals%%)
-}
+a[href|="/alsemote"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 131px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -310px -601px;  
+} 
 
-a[href|="/allove"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 138px;
-    height: 150px;
-    background-image:url(%%allove%%)
-}
+a[href|="/chatavia"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 133px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -0px -748px;  
+} 
 
-a[href|="/windytavi"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 166px;
-    height: 150px;
-    background-image:url(%%windytavi%%)
-}
+a[href|="/basscannon"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 289px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -153px -751px;  
+} 
 
-a[href|="/tavithief"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 305px;
-    height: 150px;
-    background-image:url(%%tavithief%%)
-}
+a[href|="/alpals"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 156px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -0px -898px;  
+} 
 
-a[href|="/alandsublink"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 113px;
-    height: 150px;
-    background-image:url(%%alandsublink%%)
-}
+a[href|="/catavia"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 149px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -293px -901px;  
+} 
 
-a[href|="/tavieww"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 214px;
-    height: 150px;
-    background-image:url(%%tavieww%%)
-}
+a[href|="/sittingtavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 77px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -0px -1048px;  
+} 
 
-a[href|="/armedtavi"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 101px;
-    height: 150px;
-    background-image:url(%%armedtavi%%)
-}
+a[href|="/tavithief"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 305px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -137px -1051px;  
+} 
 
-a[href|="/octyseal"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 102px;
-    height: 150px;
-    background-image:url(%%Octyseal%%)
-}
+a[href|="/tavireally"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 156px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -0px -1198px;  
+} 
 
-a[href|="/othercreepaloo"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 122px;
-    height: 150px;
-    background-image:url(%%othercreepaloo%%)
-}
+a[href|="/twobestfriends"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 273px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -169px -1201px;  
+} 
 
-a[href|="/chibimafiatavi"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 149px;
-    height: 150px;
-    background-image:url(%%chibimafiatavi%%)
-}
+a[href|="/angryal"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 127px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -0px -1348px;  
+} 
 
-a[href|="/fluttertavisleep"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 210px;
-    height: 150px;
-    background-image:url(%%fluttertavisleep%%)
-}
+a[href|="/alandsublink"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 113px;
+ height: 150px;
+ background-image: url(%%spritesheet2%%);
+ background-position: -329px -1350px;  
+} 
+  
+/*stylesheet3*/
 
-a[href|="/octascratchrelax"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 206px;
-    height: 150px;
-    background-image:url(%%octascratchrelax%%)
-}
+a[href|="/tavilisten"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 219px;
+ height: 150px;
+ background-image: url(%%spritesheet3%%);
+ background-position: -0px -0px;  
+} 
 
-a[href|="/Tavicolgatenuzzle"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 237px;
-    height: 150px;
-    background-image:url(%%Tavicolgatenuzzle%%)
-}
+a[href|="/octascratchsocks"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 392px;
+ height: 150px;
+ background-image: url(%%spritesheet3%%);
+ background-position: -0px -150px;  
+} 
 
-a[href|="/tavilisten"] {
-    display: block;
-    clear: none;
-    float: left;
-    width: 219px;
-    height: 150px;
-    background-image:url(%%tavilisten%%)
-}
+a[href|="/tavilyranuzzle"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 237px;
+ height: 150px;
+ background-image: url(%%spritesheet3%%);
+ background-position: -0px -300px;  
+} 
+
+a[href|="/elementofclass"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 174px;
+ height: 150px;
+ background-image: url(%%spritesheet3%%);
+ background-position: -237px -300px;  
+} 
